--- a/template.yaml
+++ b/template.yaml
@@ -8,20 +8,67 @@ Globals:
     Runtime: python3.10
     MemorySize: 128
     Architectures: [x86_64]
+    Environment:
+      Variables:
+        TABLE_NAME: !Ref LaunchesTable
 
 Resources:
+  LaunchesTable:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      TableName: SpaceXLaunchesDB
+      AttributeDefinitions:
+        - AttributeName: "launch_id"
+          AttributeType: "S"
+      KeySchema:
+        - AttributeName: "launch_id"
+          KeyType: "HASH"
+      BillingMode: PAY_PER_REQUEST
+      SSESpecification:
+        SSEEnabled: true
+
+  FetchLaunchesFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: fetch-spacex-launches
+      Handler: fetch_launches.fetch_launches_handler
+      CodeUri: aws_lambda/fetch_launches/
+      Policies:
+        - Version: "2012-10-17"
+          Statement:
+            - Effect: Allow
+              Action:
+                - dynamodb:PutItem
+              Resource: !GetAtt LaunchesTable.Arn
+      Events:
+        ScheduleRule:
+          Type: Schedule
+          Properties:
+            Schedule: "rate(6 hours)"  # Ejecución automática cada 6 horas
+            Enabled: true
+        ApiGetLaunches:
+          Type: HttpApi
+          Properties:
+            Path: /fetch-launches
+            Method: POST
+
   GetLaunchesFunction:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: get-launches-lambda
-      Handler: lambda_function.lambda_handler
+      FunctionName: get-spacex-launches
+      Handler: get_launches.handle_get_launches
       CodeUri: aws_lambda/get_launches/
       Policies:
-        - DynamoDBReadPolicy:
-            TableName: SpaceXLaunches
+        - Version: "2012-10-17"
+          Statement:
+            - Effect: Allow
+              Action:
+                - dynamodb:GetItem
+                - dynamodb:Query
+              Resource: !GetAtt LaunchesTable.Arn
       Events:
         ApiGetLaunches:
-          Type: Api
+          Type: HttpApi
           Properties:
             Path: /launches
             Method: GET
