--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -1,11 +1,14 @@
 name: Deploy Backend
 
 on:
-  push:
-    branches: [main]
+  workflow_run:
+    workflows: ["Test Backend"]
+    types:
+      - completed
 
 jobs:
   deploy:
+    if: ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'main' }}
     runs-on: ubuntu-latest
     environment: Prod Space Backend
 
